--- a/js-Claculator/css/style.css
+++ b/js-Claculator/css/style.css
@@ -10,7 +10,7 @@
     grid-template: repeat(6, 1fr) / repeat(4,1fr);
     align-items: center;
     gap: 20px;
-    padding: 2rem;
+    padding: 1.5rem;
     background-color:rgba(211, 211, 211, 0.5); 
 }
 #screen{
@@ -21,17 +21,18 @@
     font-size: larger;
     font-weight: 900;
     background-color: #fff;
-    
+    overflow: hidden;
 }
 #equal{
     grid-column:1/3 ;
 }
-button{
+div,button{
     background-color: #fff;
     font-size: larger;
     font-weight: 500;
     border-radius: 20px;
     height: 80%;
     border: 1px solid black;
-    
+    padding:0;
+    outline: none   ;
 }
