implicit value of button fixed

--- a/js-jQuery-TicTacToe/css/styles.css
+++ b/js-jQuery-TicTacToe/css/styles.css
@@ -2,9 +2,9 @@ h1{
     text-align: center;
     text-decoration: underline;
 }
+/* Main grid of tic  tac  toe */
 #container{
     margin: 1rem auto;
-    display: inline-block;
     display: grid;
     grid-template: repeat(3,1fr)/repeat(3,1fr);
     gap: 10px;
@@ -13,10 +13,23 @@ h1{
     border: 0;
     background-color:black;
 }
+.box{
 
-/* buttons */
+}
+#container div{
+    background-color: white;
+    background-size: 80%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.cross{
+    background-image: url('../images/images.png');
+}
+.circle{
+    background-image: url('../images/index.png');
+}
+/* buttons bar */
 .button-bar{
-    margin: 0 auto;
     height: 100px;
     display: flex;
     justify-content: center;
@@ -39,26 +52,6 @@ h1{
     margin:1rem;
     outline: none;
 }
-
-/* used in jquery-js logic */
-.box{
-    background-color:white;
-}
-.cross{
-    background-image: url('../images/images.png');
-    background-size: 80%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: white;
-}
-.circle{
-    background-image: url('../images/index.png');
-    background-size: 80%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: white;
-
-}
 /* Result-bar */
 #result-bar{
 text-align: center;
@@ -72,8 +65,13 @@ color: darkgreen;
     border: 1px solid black;
     justify-content: space-evenly;
 }
-#reset{
+#clear , #reset{
     cursor: pointer;
     border: black 1px solid;
 }
-/* MediaQueries */
+/* since width was hard coded 400px */
+@media only screen and (max-width:410px){
+    #container{
+        width: 90%;
+    }
+}
